photo upload, client, server, seed data for it

--- a/client/src/lang/cn.json
+++ b/client/src/lang/cn.json
@@ -2,7 +2,9 @@
   "global": {
     "submit": "提交",
     "loading": "装载",
-    "logout": "注销"
+    "logout": "注销",
+    "login": "Login"
+
   },
 
   "Home": {
