--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -6,7 +6,7 @@
     "login": "Login"
   },
   "Home": {
-    "listHeading": "Shanghai Pizza Rankings"
+    "listHeading": "Pizza Rankings"
   },
   "CreateVenue": {
     "addNew": "Add a new venue",
