--- a/client/src/lang/th.json
+++ b/client/src/lang/th.json
@@ -3,10 +3,10 @@
     "submit": "ส่ง",
     "loading": "กำลังโหลด",
     "logout": "ออกจากระบบ",
-    "login": "Login"
+    "login": "ากระ"
   },
   "Home": {
-    "listHeading": "Shanghai Pizza Rankings"
+    "listHeading": "พิซซ่าจัดอันดับ"
   },
   "CreateVenue": {
     "addNew": "เพิ่มสถานที่ใหม่",
